# SD_Projekt4

./: CMakeLists.txt
src/: Analysis.cpp  Analysis.hpp  Binary.cpp  Binary.hpp  Binomial.cpp  Binomial.hpp  CMakeLists.txt  Collection.cpp  Collection.hpp  Element.hpp  Fibonacci.cpp  Fibonacci.hpp  Heap.cpp  Heap.hpp  Pairing.cpp  Pairing.hpp  TwoThreeHeap.cpp  TwoThreeHeap.hpp  Utils.cpp  Utils.hpp  main.cpp
test/: BinaryTests.cpp  BinomialTests.cpp  CMakeLists.txt  ElementTests.cpp  FibonacciTests.cpp  HeapTests.cpp  PairingTests.cpp  TwoThreeTests.cpp
